[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/all_editable_texts.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/calendar_button/calendar_script.gd" type="Script" id=2]
[ext_resource path="res://src/TemplateNode.gd" type="Script" id=6]

[node name="Control" type="Control"]
margin_right = 1200.0
margin_bottom = 150.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1000, 120 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIndexLbl" type="Label" parent="HBoxContainer"]
margin_right = 75.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.109804, 0.109804, 0.105882, 1 )
text = "S/N"
valign = 1
autowrap = true

[node name="UserCommentLbl" type="Label" parent="HBoxContainer"]
margin_left = 105.0
margin_right = 558.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 6.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.109804, 0.109804, 0.105882, 1 )
text = "your entry goes here....."
valign = 1
autowrap = true

[node name="DateLbl" type="Label" parent="HBoxContainer"]
margin_left = 588.0
margin_top = 68.0
margin_right = 654.0
margin_bottom = 82.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Entry Date"

[node name="CheckButton" type="CheckButton" parent="HBoxContainer"]
margin_left = 684.0
margin_right = 760.0
margin_bottom = 150.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompletionLbl" type="Label" parent="HBoxContainer"]
margin_left = 790.0
margin_top = 67.0
margin_right = 910.0
margin_bottom = 83.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "% Completion"

[node name="PercentageSlider" type="HSlider" parent="HBoxContainer"]
margin_left = 940.0
margin_right = 1015.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
step = 5.0
scrollable = false
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
margin_left = 1045.0
margin_right = 1069.0
margin_bottom = 150.0

[node name="dueDateButton" type="Button" parent="HBoxContainer"]
margin_left = 1099.0
margin_right = 1199.0
margin_bottom = 150.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = true
action_mode = 0
text = "Set Due Date:"
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="value_changed" from="HBoxContainer/PercentageSlider" to="." method="_on_PercentageSlider_value_changed"]
[connection signal="pressed" from="HBoxContainer/CheckBox" to="." method="_on_CheckBox_pressed"]
